--- a/public/css/style.css
+++ b/public/css/style.css
@@ -606,11 +606,11 @@ h1, h2, h3, h4, h5,
   color: #000; }
   .section-title-underline span {
     display: inline-block;
-    border-bottom: 4px solid #51be78; }
+    border-bottom: 4px solid #ff6c00; }
   .section-title-underline.style-2 {
     color: #fff; }
     .section-title-underline.style-2 span {
-      border-color: #51be78; }
+      border-color: #ff6c00; }
 
 .section-bg {
   background-size: cover;
@@ -639,7 +639,7 @@ h1, h2, h3, h4, h5,
       color: #51be78;
       margin-bottom: 30px; }
     .section-bg.style-1 p {
-      color: #7697c6; }
+      color: #ffffff; }
 
 .news-updates {
   padding: 5rem 0; }
@@ -707,7 +707,7 @@ h1, h2, h3, h4, h5,
   display: inline-block;
   width: 40px;
   height: 40px;
-  background: #51be78;
+  background: #ff6c00;
   position: relative; }
   .social-wrap a > span {
     position: absolute;
@@ -833,7 +833,7 @@ h1, h2, h3, h4, h5,
         margin: 2px 5px;
         background: rgba(0, 0, 0, 0.2); }
       .owl-slide-3 .owl-dots .owl-dot.active > span, .owl-slide .owl-dots .owl-dot.active > span {
-        background: #51be78; }
+        background: #ff6c00;; }
 
 .owl-slide .owl-nav {
   display: none; }
@@ -897,7 +897,7 @@ h1, h2, h3, h4, h5,
   .course-1-item figure {
     position: relative; }
   .course-1-item .category {
-    background: #51be78;
+    background: #183661;;
     padding: 20px; }
     .course-1-item .category h3 {
       color: #fff;
@@ -911,7 +911,7 @@ h1, h2, h3, h4, h5,
     -ms-transform: translatey(-100%);
     transform: translatey(-100%);
     padding: 10px 20px;
-    background: #183661;
+    background: #ff6c00;;
     color: #fff; }
   .course-1-item .course-1-content {
     padding: 20px 40px;
@@ -943,7 +943,7 @@ h1, h2, h3, h4, h5,
     color: #fff;
     text-decoration: underline; }
   .footer .copyright {
-    color: #fff;
+    color: #ff6c00;;
     padding-top: 7rem;
     text-align: center; }
 
