module url + yarn + dashboard color

--- a/public/dashboard/style.css
+++ b/public/dashboard/style.css
@@ -3650,7 +3650,7 @@ div#sparklinehome canvas {
     width: 100% !important;
 }
 .header-top-area {
-    background: #51be78;
+    background: #FF6C00;
 }
 .sidebar-nav .metismenu{
 	background: #fff;
@@ -4118,7 +4118,7 @@ div#sparklinehome canvas {
 	font-weight:300;
 }
 .menu-switcher-pro .btn-info:active, .menu-switcher-pro .btn-info:focus, .menu-switcher-pro .btn-info:hover, .menu-switcher-pro .btn-info:visited, .header-drl-controller-btn.btn-info:active:focus{
-	background: #006DF0;
+	background: #000000;
 	outline:none;
 }
 .mini-navbar .single-review-st-text img {
